--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.0.0",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "scss": "^0.2.4",
     "vite": "^5.0.8"
   }
 }
