--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.1",
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
